#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-12-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999967 released.

        * More Development on Import/Export Menu Item.

        * Implemented Return to Admin from Admin sub menus.

        * New version of Term::Menus paired with this release.


2013-12-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999966 released.

        * More Development on Import/Export Menu Item.


2013-12-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999965 released.

        * Added --cat to display FullAuto user files from
          command line.

        * More Development on Import/Export Menu Item.

        * New version of Term::Menus paired with this release.


2013-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999964 released.

        * More Development on Import/Export Menu Item.

        * New version of Term::Menus paired with this release.


2013-11-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999963 released.

        * Changed out code for "Press Any Key".

        * Removed MYMETA.* from distribution.


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999962 released.

        * Eliminated prompt for Net::SSLeay during install.


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999961 released.

        * Mapped Date::Format to TimeDate.


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999960 released.

        * Added prerequisite IO::HTML.
