@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 69d4ea9b150cdb4b55ae73ad3975879aa4d62a73 ChangeLog
+SHA1 f48e97f56f0c37948d62824910eb4eb99943036d ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 1d292a0e6dba2ce264985cc3004ff0dc9b298bfc MANIFEST
-SHA1 b67ac12951de7d98a65bbce16b403210f33995a1 META.yml
-SHA1 f4d82505aa86cfeacc7263fb15159af7c63be076 Makefile.PL
+SHA1 eb4371efae7f58a497e49690dc52c95931efd5ed META.yml
+SHA1 36ca8ae2fdca1202056c3a9427d8bab4b4c7a3a2 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 757f8405065fb6398dd1a6c20f29ba971375537f bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 05f4ff4f56e83c7351210eafd93582cc2c37600b lib/Net/FullAuto.pm
+SHA1 4a7fb17028dddce3ce6fe3ae939469c072f650a1 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,17 +48,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 0def838230876164afd21e3979a37b1043f103ba lib/Net/FullAuto/FA_Core.pm
+SHA1 f83c3aa78468b36b3a451c3f653b0c205d94a862 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSp13wAAoJEBa/9Pad787EDHwH/AnvUTdoL9hzl9xto2yW8Rqw
-RemqB94RvB/MkwBnIKCyC3zT6SmOvrasV1kG80tJ8ZqTYDseFB/ZVUQ072Q70wfq
-AwDcfxRi4vjmlx3HTF+ge6bXgSDt4Nrc5njY+/UjweTpIw1A3MHi5WkpUsUqeSV5
-ZCU9Mwf5+txVP70qyGXw/2Um9zGMJWjqARKkN9yKInYkwCeV8PcShlH4ad2H1kpq
-4Dt/spC/BoFz0o5HeJRWPqkvsOeiXI2c8vqPkK3pvFyyG91WIc/DxAje2Qu83ux+
-mPxiW5SjXe5SN+1lRtUq4xbv0+Wn1kV2+7jTvxqdrsNUuJ0/C/d9L3hY00YVBME=
-=Et15
+iQEcBAEBAgAGBQJSqHErAAoJEBa/9Pad787E1pwH/1k9nktNuFI9CtZSzAD2i+rX
+5Tu7SBIvuQY33mBRiXZ2Wnio5vOhW/2YIUOG0mRIayTTwXH7Ksbp2juLqgeZ+M35
+yB8IEnWXX6xaFs3KsKgaoQ+NBL14bg6O/mxJs/L5zgfJnXxYOkR4Am50aUX7uK2n
+e8CS8ppxjzR09syNlRjVGCh7RcYSIEp3/SjdqkqDQWGcXTxJNO+nQmrvVbRMROmY
+KW5hy2WiD4nbF6g2LGApdq9ncUxe1+lF7OplExKFm8otbqcjgO/FmELl+x3FY3OA
+Zfd2G7A+y4wXHjphluB6DlUKRalIZrNZjSFGYRALWJk2FRmsuDVyzvGSS2hbc8U=
+=HQMV
 -----END PGP SIGNATURE-----
