@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999967';
+our $VERSION='0.99999968';
 
 
 use 5.005;
